--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
-:root {
+
+#root {
+  padding: 0 !important;
+}
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,4 +70,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
