--- a/client/src/pages/LandingPage/LandingPage.css
+++ b/client/src/pages/LandingPage/LandingPage.css
@@ -55,6 +55,7 @@
         }
 
         .btn-primary {
+            min-width: max-content;
             background-color: var(--primary);
             color: var(--white);
             border: 2px solid var(--primary);
